--- a/src/components/TaskList/TaskList.css
+++ b/src/components/TaskList/TaskList.css
@@ -4,10 +4,13 @@
     border-radius: 20px;
     margin: 5px 5px;
     padding: 10px;
-    width: 30%;
-}
-.list:hover {
+    width: 23vw;
     cursor: grab;
+}
+
+.is-grabbing {
+    opacity: 0.8;
+    cursor: grabbing;
 }
 
 .list>header {
