--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,7 @@
 body {
   margin: 0;
   font: 14px/18px "Helvetica Neue", Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  background: linear-gradient(45deg, #3551eb, #3d7bee, #23d573, #6edff3);
+  background: linear-gradient(45deg, #eb7535, #3d7bee, #23d573, #6edff3);
   background-size: 1000% 1000%;
   animation: gradient 3s ease infinite;
 }
