--- a/src/components/navbar/style.module.css
+++ b/src/components/navbar/style.module.css
@@ -3,16 +3,17 @@
     width: auto;
     min-width: 100vw;
     background-color: rgb(41, 150, 245);
-    padding:0.5%;
+    padding:0.2%;
 }
 .navbar__container .navbar__container_wrapper
 {
 	display: flex;
-	padding: 20px;
+	padding: 10px;
 	justify-content: space-between;
 	height: 100%;
 	width: 100%;
-	border-bottom-left-radius: 50px;
+	border-bottom-left-radius: 35px;
+	align-items: center;
 	background-color: rgb(173, 173, 175);
 }
 
@@ -23,9 +24,35 @@
 .navbar__container .navbar__container_wrapper .home_icon_container .home_icon
 {
 	color: rgb(141 141 143);
+	margin-left: 10px;
 	cursor: pointer;
 }
 .navbar__container .navbar__container_wrapper .home_icon_container .home_icon:hover
 {
 	color: rgb(98, 98, 99);
+}
+
+.navbar__container .navbar__container_wrapper .wrapper_profile .my_infor
+{
+    display: flex;
+	text-align: start;
+    justify-content: space-between;
+	min-width: max-content;
+	align-items: center;
+}
+.navbar__container .navbar__container_wrapper .wrapper_profile .my_infor>p
+{
+	margin: 10px;
+}
+.navbar__container .navbar__container_wrapper .wrapper_profile .my_infor .img_container
+{
+    width: 12vh;
+    height: 12vh;
+}
+.navbar__container .navbar__container_wrapper .wrapper_profile .my_infor .img_avt
+{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
 }
