--- a/src/components/navbar/style.module.css
+++ b/src/components/navbar/style.module.css
@@ -8,7 +8,7 @@
 .navbar__container .navbar__container_wrapper
 {
 	display: flex;
-	padding: 10px;
+	padding: 5px;
 	justify-content: space-between;
 	height: 100%;
 	width: 100%;
@@ -24,7 +24,7 @@
 .navbar__container .navbar__container_wrapper .home_icon_container .home_icon
 {
 	color: rgb(141 141 143);
-	margin-left: 10px;
+	margin-left: 20px;
 	cursor: pointer;
 }
 .navbar__container .navbar__container_wrapper .home_icon_container .home_icon:hover
@@ -46,8 +46,8 @@
 }
 .navbar__container .navbar__container_wrapper .wrapper_profile .my_infor .img_container
 {
-    width: 12vh;
-    height: 12vh;
+    width: 7vh;
+    height: 7vh;
 }
 .navbar__container .navbar__container_wrapper .wrapper_profile .my_infor .img_avt
 {
@@ -55,4 +55,43 @@
     height: 100%;
     object-fit: cover;
     border-radius: 50%;
+}
+.navbar__container .navbar__container_wrapper .wrapper_profile .my_infor .img_avt:hover
+{
+    opacity: 0.7;
+	cursor: pointer;
+}
+
+.navbar__container .navbar__container_wrapper .navbar__list_container{
+	display: flex;
+	float: right;
+  	justify-content: center; /* Center the list horizontally */
+}
+.navbar__container .navbar__container_wrapper .navbar__list_container .navbar__list_wrapper{
+	display: flex;
+	margin-right: 15vh;
+}
+.navbar__container .navbar__container_wrapper .navbar__list_container .navbar__list_wrapper>ul{
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	display: flex;
+	margin-right: 10px; /* Add some space between the items */
+}
+.navbar__container .navbar__container_wrapper .navbar__list_container .navbar__list_wrapper>ul>li{
+	border-radius: 12px;
+	background-color: rgb(173, 173, 175);
+}
+.navbar__container .navbar__container_wrapper .navbar__list_container .navbar__list_wrapper>ul>li>a{
+	text-decoration: none;
+	color: #000000;
+	padding: 10px;
+	display: block;
+	font-size: large;
+	font-weight: bolder;
+	font-style: italic;
+}
+.navbar__container .navbar__container_wrapper .navbar__list_container .navbar__list_wrapper>ul>li>a:hover{
+	background-color: #eee;
+	border-radius: 12px;
 }
