--- a/src/pages/Auth/Login/index.css
+++ b/src/pages/Auth/Login/index.css
@@ -6,7 +6,7 @@
   width: 30%;
   height: 60%;
   margin: 100px auto;
-  background-color: #FFFFFF;
+  background-color: #e1e1e1;
   border-radius: 25px;
 }
 
