--- a/src/components/background_slide/backgroundSlide.module.css
+++ b/src/components/background_slide/backgroundSlide.module.css
@@ -1,6 +1,7 @@
 .slider_container {
   width: 80%;
-  height: 200px;
+  height: 20vh;
+  width: 18vw;
   position: relative;
   overflow: hidden;
 }
