--- a/src/components/room/room.module.css
+++ b/src/components/room/room.module.css
@@ -10,15 +10,17 @@
     padding:0.2%;
     height: 100vh;
     width: 100vw;
+    position: relative;
 }
 
 .header_container
 {
-    height: 10vh;
+    height: fit-content;
 	width: 100%;
 }
 .header_container_wrapper
 {
+    height: auto;
     display: flex;
 	float: right;
   	justify-content: space-between;
@@ -30,8 +32,6 @@
     justify-content: space-between;
     align-items: center;
     list-style: none;
-    padding: 0;
-    margin: 0;
 }
 .header_container_wrapper li {
     margin: 0 10px;
