--- a/src/components/motivational_quote_dropdown/motivational_quote/MotivationalQuoteDropdown.module.css
+++ b/src/components/motivational_quote_dropdown/motivational_quote/MotivationalQuoteDropdown.module.css
@@ -1,10 +1,7 @@
 .motivational_quote_dropdown_container {
     height: fit-content;
     width: fit-content;
-    position: absolute;
     z-index: 100;
-    top: 15%;
-    left: 95%;
 }
 
 .motivational_quote_dropdown_container_wrapper {
@@ -14,16 +11,19 @@
     padding: 10px;
     border-radius: 10px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    transform: translate(-50%, -50%);
     box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.3);
+    
 }
 
 .motivational_quote_dropdown_container_wrapper ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 .motivational_quote_dropdown_container_wrapper li {
@@ -35,6 +35,7 @@
     padding: 10px;
     border-bottom: 2px solid transparent;
     transition: border-bottom 0.3s ease;
+    gap: 1rem;
 }
 
 .motivational_quote_dropdown_container_wrapper li:hover {
