--- a/src/components/room/room.module.css
+++ b/src/components/room/room.module.css
@@ -1,15 +1,15 @@
 .room_container
 {
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     background-color: rgb(182, 213, 241);
 }
 
 .room_container_wrapper
 {
-    padding:0.2%;
-    height: 100vh;
-    width: 100vw;
+    padding: 0.2%;
+    height: 100%;
+    width: 100%;
     position: relative;
 }
 
@@ -20,11 +20,14 @@
 }
 .header_container_wrapper
 {
-    height: auto;
-    display: flex;
+    height: 100%;
+    width: 100%;
 	float: right;
   	justify-content: space-between;
-    margin: 20px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
 
 .header_container_wrapper ul{
@@ -41,7 +44,6 @@
     background-color: transparent;
     font-size: 16px;
     cursor: pointer;
-    
 }
 .header_icon{
     background-color: transparent;
