--- a/src/components/timer/Timer.module.css
+++ b/src/components/timer/Timer.module.css
@@ -11,8 +11,13 @@
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 10px;
 }
+.timer_container_wrapper_clicked{
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
 .body_container{
     height: 80%;
     width: 100%;
-    background-color: rgb(141, 244, 107);
+    background-color: transparent;
 }
