--- a/src/components/timer/timer_header/TimerHeader.module.css
+++ b/src/components/timer/timer_header/TimerHeader.module.css
@@ -1,15 +1,30 @@
-.header_container{
+.header_container {
     height: 20%;
     width: 100%;
 }
-.header_container_wrapper{
+
+.header_container_wrapper {
     width: 100%;
     height: 100%;
     display: flex;
-    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    background-color: transparent;
+    align-items: center;
 }
-.dropdown_container{
+
+.dropdown_container {
     height: 100%;
     width: fit-content;
-    background-color: aquamarine;
+    background-color: rgb(220, 219, 219)
+}
+
+.setting_icon {
+    color: white;
+    cursor: pointer;
+}
+
+.setting_icon:hover {
+    opacity: 0.7;
+    cursor: pointer;
 }
