--- a/src/components/timer/timer_personal/TimerPersonal.module.css
+++ b/src/components/timer/timer_personal/TimerPersonal.module.css
@@ -1,17 +1,20 @@
 .container {
     height: fit-content;
     width: 100%;
-    background-color: violet;
+    background-color: transparent;
 }
 
 .container_wrapper {
+    width: 100%;
+    height: 100%;
+}
+.row_one_container{
     display: flex;
     align-items: center;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: space-between;
 }
-
 .counter_container {
     height: auto;
     width: auto;
@@ -27,4 +30,13 @@
     color: white;
     height: 100%;
     width: auto;
+    cursor: pointer;
+}
+.row_two_container{
+    color: white;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
 }
