--- a/src/components/Task/Task.module.css
+++ b/src/components/Task/Task.module.css
@@ -1,22 +1,39 @@
-.card {
-    background-color: #FFF;
-    border-bottom: 1px solid #CCC;
-    padding: 5px;
-    border-radius: 10px;
-}
-.card>header{
-    text-align: start;
-    display: flex;
-    width: fit-content;
+.card_container {
     height: fit-content;
+    width: 100%;
 }
-
-.card:hover {
+.card_container_wrapper{
+    height: 100%;
+    background-color: transparent;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: row;
+    outline: 1px solid rgb(172, 174, 173);
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    padding-right: 3px;
+}
+.card_container_wrapper>textarea{
+    font-size: 18px;
+    font-weight: lighter;
+    font-style: italic;
+    border: none;
+    background-color: transparent;
+    color: #333;
+    outline: none;
+    height: auto;
+    min-height: 1em;
+    resize: none;
+}
+.card_container_wrapper:hover {
     background-color: #F0F0F0;
     cursor: pointer;
 }
-
-.detail {
-    font-size: 12px;
-    color: #939393;
+.icon{
+    color: rgb(134, 132, 132);
+    margin-right: 5px;
+}
+.icon:hover{
+    color: rgb(180, 179, 179);
 }
