--- a/src/components/room/room.module.css
+++ b/src/components/room/room.module.css
@@ -1,56 +1,74 @@
-.room_container
-{
+.room_container {
     height: 100vh;
     width: 100vw;
     background-color: rgb(182, 213, 241);
+    position: relative;
 }
 
-.room_container_wrapper
-{
+.room_container_wrapper {
     padding: 0.2%;
     height: 100%;
     width: 100%;
     position: relative;
 }
 
-.header_container
-{
+.header_container {
     height: fit-content;
-	width: 100%;
+    width: 100%;
 }
-.header_container_wrapper
-{
+
+.header_container_wrapper {
     height: 100%;
     width: 100%;
-	float: right;
-  	justify-content: space-between;
+    float: right;
+    justify-content: space-between;
     padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
 }
 
-.header_container_wrapper ul{
+.header_container_wrapper>ul {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     list-style: none;
 }
-.header_container_wrapper li {
-    margin: 0 10px;
+
+.header_container_wrapper>li {
+    margin: 0;
+    height: 100%;
+    width: 100%;
 }
-.header_container_wrapper button{
+
+.header_container_wrapper button {
     border: none;
     background-color: transparent;
     font-size: 16px;
     cursor: pointer;
 }
-.header_icon{
+
+.header_icon {
     background-color: transparent;
     color: white;
     margin-right: 1vw;
+    position: relative;
+    display: inline-block;
 }
-.header_icon:hover{
+.header_icon:hover {
     opacity: 0.7;
-    cursor: pointer;
+}
+.header_container_wrapper li:hover .icon_description {
+    display: block;
+    position: fixed;
+}
+.icon_description {
+    display: none;
+    line-break: auto;
+    background-color: transparent;
+    color: rgb(147, 148, 149);
+    font-style: italic;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: large;
+    font-weight: bold;
 }
