--- a/src/components/task_manager/TaskManager.module.css
+++ b/src/components/task_manager/TaskManager.module.css
@@ -17,6 +17,7 @@
     display: flex;
     flex-direction: row;
     overflow: auto;
+    gap: 1rem;
 }
 
 .task_manager_container_wrapper::-webkit-scrollbar {
