--- a/src/components/Task/task_edit_menu/label_manager/LabelManager.module.css
+++ b/src/components/Task/task_edit_menu/label_manager/LabelManager.module.css
@@ -1,4 +1,4 @@
-.label_manager_container{
+.label_manager_container {
     width: 20vw;
     height: 60vh;
     max-height: 70vh;
@@ -6,20 +6,24 @@
     top: 100%;
     left: 0%;
 }
-.label_manager_container_wrapper{
+
+.label_manager_container_wrapper {
     width: 20vw;
     height: 60vh;
     max-height: 70vh;
-    background-color: #E3E3E3;;
+    background-color: #E3E3E3;
+    ;
     border-radius: 20px;
 }
-.header_container{
+
+.header_container {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
-.header_container>h1{
+
+.header_container>h1 {
     width: 100%;
     font-size: 32px;
     font-weight: bold;
@@ -28,15 +32,19 @@
     font-family: "Playfair Display", serif;
     font-style: italic;
 }
-.close_icon{
+
+.close_icon {
     color: #b6b3b3;
     cursor: pointer;
 }
-.close_icon:hover{
+
+.close_icon:hover {
     color: #f9f9f9;
 }
-.label_list{
-    width: 100%;;
+
+.label_list {
+    width: 100%;
+    ;
     height: 80%;
     display: flex;
     flex-direction: column;
@@ -45,4 +53,38 @@
     justify-content: flex-start;
     align-items: center;
     gap: 0.3rem;
+}
+
+.add_label_container {
+    display: flex;
+    flex-direction: row;
+    font-size: small;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.add_label_container>button {
+    height: 100%;
+    width: 100%;
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    color: #ffffff;
+    background-color: #cad1ca;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    border-radius: 8x;
+}
+
+.add_label_container>button:hover {
+    background-color: #727472;
+}
+
+.add_label_container>button:focus {
+    outline: none;
+    box-shadow: 0 0 0 3px rgba(19, 18, 18, 0.2);
 }
