--- a/src/components/Task/task_edit_menu/label_manager/label/change_color_menu/ChangeColorMenu.module.css
+++ b/src/components/Task/task_edit_menu/label_manager/label/change_color_menu/ChangeColorMenu.module.css
@@ -1,12 +1,39 @@
-.change_color_container{
-    height: 30vh;
-    width: auto;
+.change_color_container {
+    height: 30%;
+    width: 150%;
     position: absolute;
-    margin-top: 6vh;
+    margin-top: 5vh;
     margin-left: 0vw;
+    background-color: brown;
 }
-.change_color_container_wrapper{
-    height: 30vh;
-    width: auto;
-    overflow: auto;
+
+.change_color_container_wrapper {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(6, calc(90%/6));
+    grid-template-rows: repeat(5, auto);
+    background-color: rgb(200, 200, 200);
+    justify-content: space-around;
+    gap: 5px;
+    align-items: center;
+    justify-items: center;
+    border-radius: 8px;
+}
+.color_item{
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    color: rgb(159, 171, 164);
+    display: flex;
+    align-items: stretch;
+    justify-content: space-around;
+    text-align: center;
+    cursor: pointer;
+    flex-wrap: nowrap;
+    flex-direction: column;
+}
+.color_item:hover{
+    margin-left: 0.08rem;
+    color: rgb(176, 185, 180);
 }
