--- a/src/components/Task/Task.module.css
+++ b/src/components/Task/Task.module.css
@@ -1,21 +1,50 @@
 .card_container {
+    --ds-surface-raised: #FFFFFF;
+    --ds-shadow-raised: 0px 1px 1px #091E4240, 0px 0px 1px #091E424F;
     height: fit-content;
     width: 100%;
+    border-radius: 5px;
+    box-shadow: var(--ds-shadow-raised,0 1px 0 #091e4240);
+    padding: 8px 8px 4px 12px;
+    background-color: var(--ds-surface-raised);
+}
+.card_container:hover{
+    background-color: #F0F0F0;
+    cursor: pointer;
+}
+.task_label_list{
+    display: flex;
+    flex-direction: row;
+    height: fit-content;
+    width: 100%;
+    background-color: transparent;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 0.3rem;
+    flex-wrap: wrap;
+    padding: 5px;
+}
+.task_label{
+    height: 0.6vh;
+    width: 20%;
+    display: flex;
+    flex-direction: row;
+    border-radius: 5px;
+    margin-left: 2.8%;
 }
 
 .card_container_wrapper {
     height: fit-content;
     width: 100%;
-    border-radius: 5px;
     display: flex;
     flex-direction: row;
-    outline: 1px solid rgb(172, 174, 173);
     flex-wrap: nowrap;
     justify-content: space-around;
     align-items: center;
     padding-right: 3px;
+    background-color: transparent;
+    cursor: auto;
 }
-
 .text_area_wrapper {
     display: grid;
     height: fit-content;
@@ -54,18 +83,15 @@
     width: 13vw;
 }
 
-.card_container_wrapper:hover {
-    background-color: #F0F0F0;
+.icon {
+    color: transparent;
     cursor: pointer;
 }
-
-.icon {
-    color: rgb(134, 132, 132);
-    margin-right: 5px;
+.card_container:hover .icon{
+    color: #a19f9f;
 }
-
-.icon:hover {
-    color: rgb(180, 179, 179);
+.card_container:hover .icon:hover {
+    color: #131212
 }
 
 .card_container_icon{
@@ -75,4 +101,23 @@
 .card_container_icon_wrapper {
     display: flex;
     flex-direction: row;
+}
+.due_date{
+    display: flex;
+    flex-direction: row;
+    border-radius: 2px;
+    font-size: 12px;
+    cursor: pointer;
+    align-content: center;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-around;
+}
+.due_date:hover{
+    background-color: white;
+}
+.due_date>span{
+    font-size: 12px;
+    color: grey;
+    cursor: pointer;
 }
