--- a/src/components/task_manager/TaskManager.module.css
+++ b/src/components/task_manager/TaskManager.module.css
@@ -2,14 +2,14 @@
     width: fit-content;
     width: fit-content;
     position: fixed;
-    top: 10rem;
-    left: 2rem;
+    top: 0;
+    left: 0;
 }
 
 .task_manager_container_wrapper {
-    max-width: 50vw;
-    min-width: 15vw;
-    max-height: 60vh;
+    max-width: 100vw;
+    min-width: 21vw;
+    max-height: 100vh;
     min-height: 40vh;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 15px;
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: row;
     overflow: auto;
-    gap: 1rem;
+    resize: both;
 }
 
 .task_manager_container_wrapper::-webkit-scrollbar {
