--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,10 +1,193 @@
-  /* entypo */
-  [class*="entypo-"]:before {
-    font-family: 'entypo', sans-serif;
-  }
+.home_page_container{
+  height: 100vh;
+  width: 100vw;
+}
+.home_page_container_wrapper{
 
-  * {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+}
+.header_container{
+  height: 10vh;
+  width: 100vw;
+  background-color: #fbfbfb;
+  box-shadow: 0 6px 8px rgba(56, 55, 55, 0.2);
+  border-end-start-radius: 40px;
+}
+.header_container_wrapper{
+  height: 10vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.home_icon_container{
+  height: 6vh;
+  width: 6vh;
+  background-color: transparent;
+  padding: 1vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: nowrap;
+  color: #cfcdd4;
+}
+.home_icon_container:hover{
+  cursor: pointer;
+  color: #c4cdd4;
+  padding-left: 1.2vh;
+  padding-bottom: 1.2vh;
+}
+.home_icon:hover{
+  box-shadow: 0 2px 4px rgba(56, 55, 55, 0.2);
+}
+@media (max-width: 600px) {
+  .home_icon_container {
+    font-size: 30px;
   }
+}
+
+@media (min-width: 601px) and (max-width: 1200px) {
+  .home_icon_container {
+    font-size: 40px;
+  }
+}
+
+@media (min-width: 1201px) {
+  .home_icon_container {
+    font-size: 50px;
+  }
+}
+.profile_infor{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+}
+.profile_infor>span{
+  color: rgb(14, 14, 14);
+}
+.avatar_container{
+  height: 6vh;
+  width: 6vh;
+  background-color: transparent;
+  padding: 0;
+  margin-right: 1vh;
+  outline: none;
+  border: none;
+}
+.avatar_container_wrapper{
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  background-image: url("https://lhmfrontend.s3.amazonaws.com/default-avatar.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  cursor: pointer;
+} 
+.avatar_menu{
+  margin-top: 10%;
+  height: 100%;
+  width: 100%;
+  background-color: #858383;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5vh;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
+}
+.avatar_menu>span{
+  height: 80%;
+  width: 90%;
+  background-color: #333536;
+  border-radius: calc(0.2vh + 0.2vw);
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.avatar_container_wrapper:hover{
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+}
+.body_container{
+  height: 90vh;
+  width: 100vw;
+}
+.body_container_wrapper{
+  height: 90vh;
+  width: 100vw;
+  overflow-y: auto;
+}
+
+.body_container_wrapper::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  background-color: #f3f3f3;
+  cursor: pointer;
+}
+
+.body_container_wrapper::-webkit-scrollbar-thumb {
+  background-color: #b4b4b4;
+  border-radius: 4px;
+}
+
+.body_container_wrapper::-webkit-scrollbar-thumb:hover {
+  background-color: #858383;
+
+}
+
+.body_container_wrapper::-webkit-scrollbar-track {
+  background-color: #f7f7f7;
+}
+
+.body_container_wrapper>h1{
+  margin-left: 3vw;
+  margin-top: 3vh;
+}
+.my_room_list_header{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  gap: 1vw;
+  padding-top: 3vh;
+}
+.my_room_list_header>h1{
+  margin-left: 3vw;
+}
+.add_my_room_list_icon{
+  height: fit-content;
+  width: fit-content;
+  font-size: calc(1.5vh + 1.5vw);
+  color: #ffffff;
+  cursor: pointer;
+}
+.add_my_room_list_icon:hover{
+  cursor: pointer;
+  color: #dbdddf;
+  padding-left: calc(0.2vh + 0.1vw);
+}
+.room_container{
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+.my_room_list_container{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  align-content: center;
+  row-gap: 6vh;
+  margin: 0% 2% 0% 2%;
+  padding: 2%;
+}
