add signup, login, motivational quote api; improve task UI; update zindex for 4 main function in room

--- a/src/components/motivational_quote_dropdown/motivational_quote/MotivationalQuoteDropdown.module.css
+++ b/src/components/motivational_quote_dropdown/motivational_quote/MotivationalQuoteDropdown.module.css
@@ -1,12 +1,11 @@
 .motivational_quote_dropdown_container {
     height: fit-content;
     width: fit-content;
-    z-index: 100;
+    position: absolute;
+    top: 50%;
 }
 
 .motivational_quote_dropdown_container_wrapper {
-    height: 100%;
-    width: 100%;
     background-color: white;
     padding: 10px;
     border-radius: 10px;
