--- a/src/components/timer/Timer.module.css
+++ b/src/components/timer/Timer.module.css
@@ -1,25 +1,34 @@
 .timer_container{
-    height: 20vh;
-    width: 20vw;
+    display: flex;
+    z-index: 104;
+    left: 653px;
+    top: 296px;
     position: fixed;
-    top: 10rem;
-    left: 30rem;
-    /* display: block; */
+    box-shadow: 0 0 4px rgba(131,131,131,.25);
+    background: #fcfcfc;
+    border-radius: 10px;
+    width: 20vw;
 }
 .timer_container_wrapper{
-    height: 100%;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background: #fcfcfc;
     border-radius: 10px;
+    width: 20vw;
 }
 .timer_container_wrapper_clicked{
-    height: 100%;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background: #fcfcfc;
+    border-radius: 10px;
+    width: 20vw;
 }
 .body_container{
-    height: 80%;
-    width: 100%;
     background-color: transparent;
-    outline: auto;
+    outline: none;
+}
+.body_container_wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: calc(0.6vw + 0.6vh) 0;
+    background: rgb(252, 252, 252);
+    color: rgb(78, 78, 78);
+    border-radius: 10px;
 }
