--- a/src/components/Task/Task.module.css
+++ b/src/components/Task/Task.module.css
@@ -2,7 +2,6 @@
     --ds-surface-raised: #FFFFFF;
     --ds-shadow-raised: 0px 1px 1px #091E4240, 0px 0px 1px #091E424F;
     height: fit-content;
-    width: 100%;
     border-radius: 5px;
     box-shadow: var(--ds-shadow-raised,0 1px 0 #091e4240);
     padding: 8px 8px 4px 12px;
@@ -44,6 +43,9 @@
     padding-right: 3px;
     background-color: transparent;
     cursor: auto;
+}
+.card_container_wrapper>input{
+    box-shadow: none;
 }
 .text_area_wrapper {
     display: grid;
@@ -91,7 +93,7 @@
     color: #a19f9f;
 }
 .card_container:hover .icon:hover {
-    color: #131212
+    color: #8b8b8b
 }
 
 .card_container_icon{
