--- a/src/components/task_manager/TaskManager.module.css
+++ b/src/components/task_manager/TaskManager.module.css
@@ -1,23 +1,43 @@
 .task_manager_container {
-    width: fit-content;
-    width: fit-content;
-    position: fixed;
-    top: 0;
-    left: 0;
-}
-
-.task_manager_container_wrapper {
     max-width: 100vw;
     min-width: 21vw;
     max-height: 100vh;
     min-height: 40vh;
-    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    background: #fcfcfc;
+    border-radius: 15px;
+}
+.header_container{
+    height: 20%;
+    width: 100%;
+}
+.header_container_wrapper{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    color: #4e4e4e;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #dfdfdf;
+}
+.dropdown_container{
+    font-size: calc(0.8vh + 0.8vw);
+    margin: calc(0.5vh + 0.5vw) calc(0.8vh + 0.8vw);
+    height: auto;
+    width: auto;
+}
+.task_manager_container_wrapper {
     border-radius: 15px;
     position: relative;
     display: flex;
     flex-direction: row;
     overflow: auto;
     resize: both;
+    gap: calc(1vh + 1vw);
 }
 
 .task_manager_container_wrapper::-webkit-scrollbar {
@@ -48,11 +68,10 @@
     height: fit-content;
     border: none;
     box-sizing: border-box;
-
 }
 
 .add_icon {
-    color: #f9f9f9;
+    color: rgb(78, 78, 78);
     padding: 1px;
     border-radius: 50%;
     background-color: transparent;
