--- a/src/components/timer/timer_header/TimerHeader.module.css
+++ b/src/components/timer/timer_header/TimerHeader.module.css
@@ -7,21 +7,26 @@
     width: 100%;
     height: 100%;
     display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    background-color: transparent;
     align-items: center;
+    color: #4e4e4e;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #dfdfdf;
 }
 
 .dropdown_container {
-    height: 100%;
-    width: fit-content;
-    background-color: rgb(220, 219, 219)
+    font-size: calc(0.8vh + 0.8vw);
+    margin: calc(0.5vh + 0.5vw) calc(0.8vh + 0.8vw);
+    height: auto;
+    width: auto;
 }
 
 .setting_icon {
-    color: white;
+    color: rgb(78, 78, 78);
     cursor: pointer;
+    margin:  0 0 calc(0.5vh + 0.5vw) calc(0.8vh + 0.8vw);
 }
 
 .setting_icon:hover {
