--- a/src/components/timer/timer_personal/TimerPersonal.module.css
+++ b/src/components/timer/timer_personal/TimerPersonal.module.css
@@ -5,38 +5,77 @@
 }
 
 .container_wrapper {
-    width: 100%;
-    height: 100%;
+    display: flex;
+    flex-direction: column;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    background: rgb(252, 252, 252);
+    color: rgb(78, 78, 78);
 }
 .row_one_container{
     display: flex;
-    align-items: center;
     flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: center;
 }
-.counter_container {
-    height: auto;
-    width: auto;
+.container_wrapper>h1{
+    display: block;
+    line-height: normal;
+    margin: 0;
+    padding: 0;
+    font-size: calc(2vh + 2vw);
+    font-weight: bold;
+    color: #3c393a; 
+    font-family: "Great Vibes", cursive; 
+    text-align: center; 
+    text-shadow: 0 1px 1px #fff;
+}
+.counter_container{
+    color: rgb(78, 78, 78);
+}
+.counter_container>h1{
+    display: block;
+    font-size: calc(2vh + 2vw);
+    margin: 0;
+    font-weight: bold;
+    color: #3c393a; 
+    font-family: "Great Vibes", cursive; 
+    text-align: center; 
+    text-shadow: 0 1px 1px #fff;
 }
 
 .counter_container_wrapper {
-    margin: 10px;
-    color: white;
+    margin: calc(0.5vw + 0.5vh);
+    color: rgb(78, 78, 78);
     font-family: sans-serif;
     font-style: italic;
 }
+.counter_container_wrapper>h1{
+    display: block;
+    font-size: calc(1.5vh + 1.5vw);
+    margin: 0;
+    font-weight: bold;
+}
 .buttons_container{
-    color: white;
+    color: rgb(78, 78, 78);
     height: 100%;
     width: auto;
     cursor: pointer;
+    display: flex;
+    margin: calc(0.5vw + 0.5vh);
 }
 .row_two_container{
-    color: white;
+    color: rgb(78, 78, 78);
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
+}
+.row_two_container>h2{
+    font-size: calc(1vw + 1vh);
+    text-align: center;
+    color: rgb(78, 78, 78);
+    margin: 0;
+    padding: calc(0.5vw + 0.5vh);
 }
