--- a/src/components/Task/task_edit_menu/label_manager/LabelManager.module.css
+++ b/src/components/Task/task_edit_menu/label_manager/LabelManager.module.css
@@ -1,7 +1,6 @@
 .label_manager_container {
     width: 20vw;
-    height: 60vh;
-    max-height: 70vh;
+    height: 40vh;
     position: absolute;
     top: 100%;
     left: 0%;
@@ -9,11 +8,14 @@
 
 .label_manager_container_wrapper {
     width: 20vw;
-    height: 60vh;
-    max-height: 70vh;
+    height: 40vh;
     background-color: #E3E3E3;
-    ;
-    border-radius: 20px;
+    border-radius: calc(1vw + 1vh);
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
 }
 
 .header_container {
@@ -21,6 +23,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
+    height: 10%;
 }
 
 .header_container>h1 {
@@ -36,6 +40,9 @@
 .close_icon {
     color: #b6b3b3;
     cursor: pointer;
+    position: absolute;
+    left: 88%;
+    font-size: calc(1vw + 1vh);
 }
 
 .close_icon:hover {
@@ -44,7 +51,6 @@
 
 .label_list {
     width: 100%;
-    ;
     height: 80%;
     display: flex;
     flex-direction: column;
@@ -56,6 +62,8 @@
 }
 
 .add_label_container {
+    width: 100%;
+    height: 10%;
     display: flex;
     flex-direction: row;
     font-size: small;
@@ -75,13 +83,13 @@
     color: #ffffff;
     background-color: #cad1ca;
     border: none;
-    border-radius: 4px;
+    border-radius: calc(1vw + 1vh);;
     cursor: pointer;
     border-radius: 8x;
 }
 
 .add_label_container>button:hover {
-    background-color: #727472;
+    background-color: #47d347;
 }
 
 .add_label_container>button:focus {
