--- a/src/components/background_menu/backgroundMenu.module.css
+++ b/src/components/background_menu/backgroundMenu.module.css
@@ -1,20 +1,88 @@
 .background_menu_container
 {
-    height: auto;
+    height: 40vh;
     width: 20vw;
-    background-color:  rgba(0, 0, 0, 0.5);
-    border-radius: 20px;
+    background: whitesmoke;
+    border-radius: calc(1vw + 1vh);
+    display: flex;
+    flex-direction: column;
+    padding: calc(1vw + 1vh);
+}
+.header_container{
+    height: 15%;
+    width: 100%;
+}
+.header_container_wrapper{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    color: #4e4e4e;
+    justify-content: space-around;
+    align-items: center;
+    border-bottom: 1px solid #dfdfdf;
+    text-align: center;
+    flex-wrap: nowrap;
+    flex-direction: row;
 }
 .background_menu_container_wrapper
 {
     height: 100%;
     width: 100%;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    border-radius: 30px;
+    border-radius: calc(1vw + 1vh);
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
+    gap:calc(1vw + 1vw);
+}
+
+.youtube_link_input_container{
+    height: 20%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.youtube_link_input_container>h3{
+    height: 50%;
+    width: 100%;
+    padding: 0 0 0 1vw;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: center;
+}
+.youtube_link_input_container_wrapper{
+    height: 50%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: calc(0.2vh + 0.2vw);
+}
+.youtube_link_input_container_wrapper>input{
+    height: 100%;
+    width: 80%;
+    padding: 0 calc(0.5vh + 0.5vw) 0 calc(0.5vh + 0.5vw);
+    border-radius: calc(0.5vh + 0.5vw);
+    font-size: calc(0.8vh + 0.8vw);
+    background-color: #efe8e8;
+}
+.youtube_link_input_container_wrapper>button{
+    height: 100%;
+    width: 20%;
+    font-size: calc(0.6vw + 0.6vh);
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    background-color: #d0d5d0;
+    color: #000000;
+    border-radius: calc(0.5vh + 0.5vw);
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+.youtube_link_input_container_wrapper>button:hover{
+    background-color: #abb0ab;
 }
