--- a/src/components/background_slide/backgroundSlide.module.css
+++ b/src/components/background_slide/backgroundSlide.module.css
@@ -1,9 +1,9 @@
 .slider_container {
-  width: 80%;
+  width: 100%;
   height: 20vh;
-  width: 18vw;
   position: relative;
   overflow: hidden;
+  cursor: pointer;
 }
 
 .slider_container_wrapper {
