--- a/src/components/new_room_form/NewRoomForm.module.css
+++ b/src/components/new_room_form/NewRoomForm.module.css
@@ -6,7 +6,7 @@
     left: 0;
     background-color: rgb(59, 59, 59);
     opacity: 0.95;
-    z-index: 99;
+    z-index: 99999999;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
