--- a/src/components/room/room.module.css
+++ b/src/components/room/room.module.css
@@ -3,10 +3,30 @@
     width: 100vw;
     position: relative;
 }
-
+.room_container>div{
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
+.room_container>div>iframe{
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
+.room_container>iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 .room_container_wrapper {
+    height: 100%;
+    width: 100%;
     padding: 0.2%;
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 .header_container {
@@ -16,11 +36,12 @@
 
 .header_container_wrapper {
     justify-content: space-between;
-    padding: 20px;
+    padding: 0 0 0 calc(1vh + 1vw);
     display: flex;
     flex-direction: row;
     align-items: center;
     flex-wrap: nowrap;
+    float: right;
 }
 .list_item_container{
     justify-content: space-between;
@@ -52,6 +73,9 @@
     font-size: calc(3vh + 3vh);
     color: aliceblue;
     cursor: pointer;
+    position: absolute;
+    left: 0;
+    top: 5%;
 }
 .back_arrow_icon:hover{
     color: rgb(186, 187, 188);
