--- a/src/components/task_manager/TaskManager.module.css
+++ b/src/components/task_manager/TaskManager.module.css
@@ -27,10 +27,15 @@
 .dropdown_container{
     font-size: calc(0.8vh + 0.8vw);
     margin: calc(0.5vh + 0.5vw) calc(0.8vh + 0.8vw);
+    text-transform: uppercase;
     height: auto;
     width: auto;
 }
 .task_manager_container_wrapper {
+    max-width: 100vw;
+    min-width: 21vw;
+    max-height: 100vh;
+    min-height: 40vh;
     border-radius: 15px;
     position: relative;
     display: flex;
@@ -39,7 +44,9 @@
     resize: both;
     gap: calc(1vh + 1vw);
 }
-
+.draggable_task_list{
+    height: fit-content;
+}
 .task_manager_container_wrapper::-webkit-scrollbar {
     width: 8px;
     height: 8px;
