--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -182,12 +182,12 @@
 }
 .my_room_list_container{
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  align-content: center;
-  row-gap: 6vh;
-  margin: 0% 2% 0% 2%;
-  padding: 2%;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+    align-content: center;
+    margin: 0% 2% 0% 2%;
+    padding: 2%;
+    gap: calc(1vw + 1vh);
 }
