--- a/src/components/Task/task_edit_menu/label_manager/LabelManager.module.css
+++ b/src/components/Task/task_edit_menu/label_manager/LabelManager.module.css
@@ -46,7 +46,7 @@
 }
 
 .close_icon:hover {
-    color: #f9f9f9;
+    color: #ff0000;
 }
 
 .label_list {
@@ -75,17 +75,12 @@
     height: 100%;
     width: 100%;
     display: inline-block;
-    padding: 10px 20px;
-    font-size: 16px;
     font-weight: bold;
-    text-align: center;
-    text-decoration: none;
     color: #ffffff;
     background-color: #cad1ca;
     border: none;
-    border-radius: calc(1vw + 1vh);;
+    border-radius: calc(1vw + 1vh);
     cursor: pointer;
-    border-radius: 8x;
 }
 
 .add_label_container>button:hover {
