--- a/src/components/new_room_form/NewRoomForm.module.css
+++ b/src/components/new_room_form/NewRoomForm.module.css
@@ -4,8 +4,6 @@
     position: absolute;
     top: 0;
     left: 0;
-    background-color: rgb(59, 59, 59);
-    opacity: 0.95;
     z-index: 99999999;
     display: flex;
     flex-direction: row;
@@ -13,28 +11,30 @@
     justify-content: center;
     align-items: center;
 }
+.background_container{
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgb(59, 59, 59);
+    opacity: 0.95;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+}
 .form_container_wrapper{
+    position: absolute;
+    top: 15vh;
+    left: 25vw;
+    z-index: 99999999;
     height: 70vh;
     width: 50vw;
     background-color: rgb(229, 226, 226);
     border-radius: calc(2vw + 2vh);
 }
-/* .form_header_container{
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-.header_close_icon{
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-} */
 
 .form_header_container {
     display: flex;
