--- a/src/components/detail_user/DetailUser.module.css
+++ b/src/components/detail_user/DetailUser.module.css
@@ -18,16 +18,16 @@
 }
 .content_container{
     background-color: #ddd;
-    height: 60vh;
-    width: 40vw;
+    height: 70vh;
+    width: 50vw;
     border-radius: calc(1.5vw + 1.5vh);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     position: fixed;
-    top: 20vh;
-    left: 30vw;
+    top: 15vh;
+    left: 25vw;
 }
 .header_container{
     height: 10%;
@@ -66,13 +66,77 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
 }
 .row_zone{
     display: flex;
     flex-direction: row;
+    width: 100%;
+    height: 25%;
+    justify-content: space-evenly;
+    align-items: center;
 }
 .an_row{
     display: flex;
     flex-direction: column;
+    width: 50%;
+    margin-left: 5%;
+}
+.an_row>input{
+    border: none;
+    width: 80%;
+    border-radius: 8px;
+    width: none;
+    font-size: 18px;
+    padding: 1rem;
+    background-color: #efe8e8;
+    box-shadow: inset 0px -2px 0px 0px rgba(124, 124, 124, 0.7);
+}
+.avatar_image{
+    height: 40%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    gap: calc(0.2vw + 0.2vh);
+}
+.avatar_image>img{
+    height: calc(10vh + 5vw);
+    width: calc(10vh + 5vw);
+    background-size: cover;
+    border-radius: 50%;
+    position: absolute;
+    top: 20%;
+}
+.avatar_image>span{
+    color: black;
+}
+.avatar_image>input{
+    height: calc(10vh + 10vw);
+    width: calc(10vh + 10vw);
+    position: fixed;
+    padding: 0;
+    box-shadow: none;
+    background: transparent;
+}
+.row_zone_button{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 8%;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.row_zone_button>button{
+    height: 100%;
+    width: 10%;
+    border: none;
+    background-color: rgb(0, 191, 57);
+    border-radius: calc(1vw + 1vh);
+    cursor: pointer;
+}
+.row_zone_button>button:hover{
+    background-color: rgb(6, 255, 80);
+    margin-left: 2%;
 }
