--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -8,9 +8,11 @@
 .header_container{
   height: 10vh;
   width: 100vw;
-  background-color: #fbfbfb;
+  background-color: #ffffff;
   box-shadow: 0 6px 8px rgba(56, 55, 55, 0.2);
   border-end-start-radius: 40px;
+  margin: 0;
+  padding: 0;
 }
 .header_container_wrapper{
   height: 10vh;
@@ -30,12 +32,12 @@
   align-items: center;
   justify-content: center;
   flex-wrap: nowrap;
-  color: #cfcdd4;
+  color: #c4cdd4;
   margin-left: 5vw;
 }
 .home_icon_container:hover{
   cursor: pointer;
-  color: #c4cdd4;
+  color: #535353;
   padding-left: 1.2vh;
   padding-bottom: 1.2vh;
 }
@@ -105,16 +107,16 @@
 .avatar_menu>span{
   display: flex;
   flex-direction: row;
-  background-color: #0009;
+  background-color: #fff;
   border-radius: 5px;
-  color: #c7d1db;;
+  color: #000000;
   margin: 0 0 4px 8px;
   padding: calc(0.6vw + 0.6vh) calc(0.8vw + 0.8vh) calc(0.6vw + 0.6vh) calc(0.7vw + 0.7vh);
   cursor: pointer;
 }
 .avatar_menu>span:hover{
-  background: #000c;
-  color: #fff;
+  background: rgba(194, 193, 193, 0.8);
+  color: #000000;
   text-decoration: none;
   transform: translateX(5px);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
@@ -158,6 +160,7 @@
 .body_container_wrapper>h1{
   margin-left: 3vw;
   margin-top: 3vh;
+  color: white;
 }
 .my_room_list_header{
   display: flex;
@@ -170,6 +173,7 @@
 }
 .my_room_list_header>h1{
   margin-left: 3vw;
+  color: white;
 }
 .add_my_room_list_icon{
   height: fit-content;
@@ -191,12 +195,12 @@
 }
 .my_room_list_container{
   display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: center;
-    align-content: center;
-    margin: 0% 2% 0% 2%;
-    padding: 2%;
-    gap: calc(1vw + 1vh);
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  align-content: center;
+  margin: 0% 2% 0% 2%;
+  padding: 2%;
+  gap: calc(1vw + 1vh);
 }
